--- a/informacao/nucleo-docente-estruturante.html
+++ b/informacao/nucleo-docente-estruturante.html
@@ -71,56 +71,57 @@
             </button>
           </nav>
           <div class="collapse" id="doc">
-          <ul class="nav nav-pills flex-column">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Apresentação<span class="sr-only">(current)</span></a>
-              <!-- <ul class="nav nav-pills flex-column">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">curricular</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">curricular</a>
-                </li>
-              </ul> -->
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Estrutura curricular</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Disciplinas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Outras informações</a>
-            </li>
-          </ul>
-
-          <ul class="nav nav-pills flex-column">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Nav item</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Nav item again</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">One more nav</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Another nav item</a>
-            </li>
-          </ul>
-
-          <ul class="nav nav-pills flex-column">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Nav item again</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">One more nav</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Another nav item</a>
-            </li>
-          </ul>
-        </div>
+            <ul class="nav nav-pills flex-column">
+              <li class="nav-item">
+                <a class="nav-link" href="apresentacao.html">Apresentação</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="identificacao.html">Identificação</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contexto.html">Contexto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="exposicao-motivos.html">Exposição de Motivos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="objetivos.html">Objetivos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="expectativa-formacao-profissional.html">Expectativas de Formação Profissional</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="principios-norteadores.html">Princípios Norteadores</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="nucleo-docente-estruturante.html">Núcleo Docente Estruturante (NDE)<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="politica-gestao-estagio.html">Política de Gestão de Estágio Não Obrigatório</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="trabalho-conclusao-curso.html">Trabalho de Conclusao de Curso (TCC)</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="integracao-ensino-pesquisa-extensao.html">Integracao, Ensino, Pesquisa e Extensao</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="avaliacao-processo-aprendizagem.html">Avaliacao do Processo de Ensino e Aprendizagem</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="avaliacao-projeto-curso.html">Avaliacao do Projeto de Curso</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="politica-qualificacao.html">Politica de Qualificação</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="requisitos-legais-normativos.html">Requisitos Legais e Normativos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="estrutura-curricular.html">Estrutura Curricular</a>
+              </li>
+            </ul>
+          </div>
         </nav>
 
         <main class="ml-sm-auto col-md-9 pt-3 section-main" role="main">
