--- a/informacao/apresentacao.html
+++ b/informacao/apresentacao.html
@@ -127,7 +127,11 @@
         <main class="ml-sm-auto col-md-9 pt-3 section-main" role="main">
           <h1>Projeto Pedagógico do Curso</h1>
           <h2 style="margin-bottom: 20px;">Apresentação</h2>
-          <p> ####################
+          <p>O curso de Bacharelado em Engenharia de Software (BES) é oferecido pelo Instituto de Informática (INF) da Universidade Federal de Goiás (UFG). A primeira versão do Projeto Pedagógico do Curso (PPC) foi criada em 2008, a segunda versão, é fruto de uma reflexão de dois anos do Núcleo Docente Estruturante (NDE), que reinventou o BES.</p>
+          <p>A busca pela qualidade é a motivação dessa segunda versão, que só pode ser adequadamente compreendida com o detalhamento da história da criação do curso e do cenário no qual está inserido, o que lembra Paulo Freire, segundo o qual “toda leitura de texto pressupõe uma rigorosa leitura do contexto”.</p>
+          <p>Não houve alteração relevante dos objetivos do curso, nem tampouco do perfil do egresso, contudo, ambos foram refinados. Os requisitos legais e normativos foram ampliados pelas diretrizes curriculares nacionais (que não existiam quando a primeira versão foi produzida). Em particular, a estratégia para atender a educação das relações étnico-raciais e para o ensino de história e cultura afro-brasileira e africana foi revista em sua totalidade.</p>
+          <p>A estrutura curricular sofreu mudanças significativas. Em particular, o fluxo sugerido, nos quatro primeiros períodos, inclui apenas disciplinas de formação básica em computação. A disciplina “Prática em Engenharia de Software” é o elemento integrador do curso, com carga horária de 320 horas. Em particular, as disciplinas específicas de Engenharia de Software são acompanhadas de uma seção adicional, “condições mínimas”, que estabelece competências a serem demonstradas/adquiridas pelo estudante em cada uma delas.</p>
+          <p>A busca por um curso de Engenharia de Software melhor é uma atribuição contínua do NDE. Esse compromisso é oportuno para estabelecer claramente a responsabilidade pela gestão do presente PPC pelo NDE, sem o qual esse texto resume-se a um registro de intenções.</p>
         </main>
       </div>
     </div>
