--- a/index.html
+++ b/index.html
@@ -1,156 +1,241 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="assets/img/marca-inf.png">
+<html lang="pt-br">
 
-    <title>PPC - BES</title>
+<head>
+  <meta charset="utf-8" />
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/logo-inf.png">
+  <link rel="icon" type="image/png" href="assets/img/logo-inf.png">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <title>Bacharelado em Engenharia de Software</title>
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+  <!--     Fonts and icons     -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+  <!-- CSS Files -->
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="assets/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
+	<link href="assets/css/bes.css" rel="stylesheet" />
+  <!-- CSS Just for demo purpose, don't include it in your project -->
+  <link href="assets/css/demo.css" rel="stylesheet" />
+</head>
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/custom.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
-  </head>
-
-  <body>
-
-    <nav class="navbar navbar-expand-md navbar-dark navbar-black bg-dark fixed-top">
-      <a class="navbar-brand" href="index.html">
-         <img src="assets/img/marca-inf.png" width="30" height="30" alt="">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#">Plano Pedagógico</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Matriz Curricular</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li> -->
-        </ul>
-        <form class="form-inline my-2 my-lg-0" action="pesquisa.html" method="get">
-          <input class="form-control mr-sm-2" name="pesquisa" type="text" placeholder="Buscar" aria-label="Search" required>
-          <button class="btn btn-warning my-2 my-sm-0" type="submit">
-            <i class="fa fa-search"></i>
-          </button>
-        </form>
-      </div>
-    </nav>
-
-    <div class="container section-main">
-
-      <div class="row align-items-center">
-        <div class="col-6 mx-auto col-md-6 order-md-2">
-          <img src="assets/img/software-engineer.jpg" alt="" class="img-fluid mb-3 mb-md-0">
-        </div>
-        <div class="col-md-6 order-md-1 text-center text-md-left pr-md-5">
-          <h1 class="mb-3">Engenharia de Software</h1>
-          <p class="lead">
-            O curso de Bacharelado em Engenharia de Software (BES) é oferecido pelo Instituto de Informática (<a href="http://inf.ufg.br" target="_blank">INF</a>) da Universidade Federal de Goiás (<a href="https://www.ufg.br/" target="_blank">UFG</a>).
-          </p>
-          <p class="lead mb-4">
-            A bacharela ou o bacharel em Engenharia de Software é capaz de efetivamente contrubuir com equipes na produção de modelos abstratos de software e realizá-loa por meio de código de qualidade. Essa contribuição é pautada por postura profissional e conduta ética.
-          </p>
-          <p class="lead mb-4">
-            Ficou intereçado? Para mais informações, conheça o Projeto Pedagógico do Curso (PPC):
-          </p>
-          <div class="d-flex flex-column flex-md-row lead mb-3">
-            <a href="apresentacao.html" class="btn btn-lg btn-outline-primary mb-3 mb-md-0 mr-md-3">Saber Mais</a>
-            <a href="assets/docs/ppc-bes.pdf" download="PPC-BES.pdf" class="btn btn-lg btn-outline-secondary">Download</a>
+<body class="landing-page sidebar-collapse">
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-lg bg-info fixed-top navbar-transparent " color-on-scroll="400">
+		<div class="container">
+	    <div class="navbar-translate">
+				<a class="navbar-brand" href="http://www.inf.ufg.br" rel="tooltip" title="Instituto de Informática - UFG" data-placement="bottom" target="_blank">
+					<div class="logo">
+						<img src="assets/img/logo-inf.png" alt="Instituto de Informática">
+					</div>
+				</a>
+	        <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+	            <span class="navbar-toggler-bar bar1"></span>
+	            <span class="navbar-toggler-bar bar2"></span>
+	            <span class="navbar-toggler-bar bar3"></span>
+	        </button>
+	    </div>
+	    <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="assets/img/blurred-image-1.jpg">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="#">
+							<p>Home</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#pablo">
+							<p>Matriz Curricular</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="informacao/apresentacao.html">
+							<p>Informações</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" rel="tooltip" title="Visualizar código fonte" data-placement="bottom" href="https://github.com/matheuspiment/integracao2017" target="_blank">
+							<i class="fa fa-github"></i>
+							<p class="d-lg-none d-xl-none">Código-fonte</p>
+						</a>
+					</li>
+				</ul>
+	    </div>
+		</div>
+	</nav>
+	<!-- End Navbar -->
+	<div class="wrapper">
+	  <div class="page-header page-header-small">
+	      <div class="page-header-image" data-parallax="true" style="background-image: url('assets/img/ilya-pavlov-87438.jpg');">
+	      </div>
+	      <div class="container">
+	          <div class="content-center">
+	              <h1 class="title">Bacharelado em Engenharia de Software</h1>
+	          </div>
+	      </div>
+	  </div>
+    <div class="section section-presentation">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 ml-auto mr-auto text-center">
+            <h2 class="title">O que é?</h2>
+            <h5 class="description">
+							O curso de Bacharelado em Engenharia de Software (BES)
+							é oferecido pelo Instituto de Informática
+							(<a href="http://inf.ufg.br" target="_blank">INF</a>)
+							da Universidade Federal de Goiás
+							(<a href="https://www.ufg.br/" target="_blank">UFG</a>).
+							</br></br>
+							A bacharela ou o bacharel em Engenharia de Software é
+							capaz de efetivamente contrubuir com equipes na produção
+							de modelos abstratos de software e realizá-loa por meio
+							de código de qualidade. Essa contribuição é pautada por
+							postura profissional e conduta ética.
+							</br></br>
+							Ficou intereçado? Para mais informações, conheça o Projeto Pedagógico do Curso (PPC):
+						</h5>
+						<div class="d-flex flex-column flex-md-row lead mb-3 mx-auto btns">
+							<a href="informacao/apresentacao.html" class="btn btn-lg mr-md-3">Saiba Mais</a>
+							<a href="assets/docs/ppc-bes.pdf" download="PPC-BES.pdf" class="btn btn-lg btn-info">Download</a>
+						</div>
+						<p class="text-muted mb-0">
+							Atualmente na versão de 2017
+						</p>
           </div>
-          <p class="text-muted mb-0">
-            Atualmente versão de 2017
-          </p>
         </div>
-      </div>
-
-    </div><!-- /.container -->
-
-    <div class=" row m-0 border border-white">
-      <div class="col-12 col-md-4 p-3 p-md-5 bg-light text-center">
-        <i class="fa fa-graduation-cap text-primary mb-2" style="font-size:28px;"></i>
-        <h3>Sobre o curso</h3>
-        <p>
-          O Curso de Engenharia de Software forma o profissional de software,
-          o engenheiro de Software, apto a participar de e conduzir empreendimentos
-          de softwares que sejam competitivos no mercado global. O estudante recebe
-          formação que lhe assegura sólida carreira na valiosa indústria de software
-          e o inicia no processo de formação de sua própria reputação como profissional.
-        </p>
-        <hr class="half-rule">
-        <a class="btn btn-outline-primary" href="#">Saiba mais</a>
-      </div>
-      <div class="col-12 col-md-4 p-3 p-md-5 bg-light text-center">
-        <i class="fa fa-list-alt text-primary mb-2" style="font-size:28px;"></i>
-        <h3>Estrutura curricular</h3>
-        <p>
-          A matriz curricular do curso perfaz 44 disciplinas. Sendo 17 disciplinas
-          de formação básica em computação. Em particular, 4 disciplinas são oferecidas
-           pelo Instituto de Matemática e Estatística (IME) e as outras 13 oferecidas
-           pelo INF que fornecem uma sólida formação em Computação, o que inclui o
-           recomendado para a formação em Matemática. E as demais disciplinas com
-           ênfase na formação específica em Engenharia de Software.
-        </p>
-        <hr class="half-rule">
-        <a class="btn btn-outline-primary" href="#">Saiba mais</a>
-      </div>
-      <div class="col-12 col-md-4 p-3 p-md-5 bg-light text-center">
-        <i class="fa fa-info text-primary mb-2" style="font-size:28px;"></i>
-        <h3>Outras informações</h3>
-        <p>
-          O Bacharelado em Engenharia de Software (BES) existe e se mantém em um
-           contexto no qual se destaca a aptidão do Instituto de Informática, a
-           carência de mão de obra apta a desenvolver softwares de qualidade e
-           a importância local do curso.
-        </p>
-        <hr class="half-rule">
-        <a href="#" class="btn btn-outline-primary">Saiba mais</a>
+        <div class="separator separator-default"></div>
+        <div class="section section-info">
+          <div class="row">
+            <div class="col-md-8 text-center mx-auto">
+            	<h3>Não tem ideia de por onde começar?</h3>
+              <h5>Navege pelos botões abaixo para obter mais detalhes do PPC,
+								essas informações podem te ajudar.
+              </h5>
+							<div class="row">
+								<div class="col-md-12 ml-auto mr-auto my-4">
+									<div class="nav-align-center">
+										<ul class="nav nav-pills nav-pills-info" role="tablist">
+											<li class="nav-item">
+												<a class="nav-link" data-toggle="tab" href="#structure-graduation" role="tablist">
+													<i class="fa fa-list-alt"></i>
+												</a>
+											</li>
+											<li class="nav-item">
+												<a class="nav-link active" data-toggle="tab" href="#about-graduation" role="tablist">
+													<i class="fa fa-graduation-cap"></i>
+												</a>
+											</li>
+											<li class="nav-item">
+												<a class="nav-link" data-toggle="tab" href="#context" role="tablist">
+													<i class="fa fa-info"></i>
+												</a>
+											</li>
+										</ul>
+									</div>
+								</div>
+								<!-- Tab panes -->
+								<div class="tab-content info">
+									<div class="tab-pane active" id="about-graduation" role="tabpanel">
+										<div class="col-md-12">
+											<h3 class="title">Sobre o Curso</h3>
+											<p class="description">
+												O Curso de Engenharia de Software forma o profissional
+												de software, o engenheiro de Software, apto a participar
+												de e conduzir empreendimentos de softwares que sejam
+												competitivos no mercado global. O estudante recebe
+												formação que lhe assegura sólida carreira na valiosa
+												indústria de software e o inicia no processo de formação
+												de sua própria reputação como profissional.
+											</p>
+											<a class="btn btn-lg btn-default" href="informacao/apresentacao.html">Saiba mais</a>
+										</div>
+									</div>
+									<div class="tab-pane" id="structure-graduation" role="tabpanel">
+										<div class="col-md-12">
+											<h3 class="title">Estrutura Curricular</h3>
+												<p class="description">
+													A matriz curricular do curso perfaz 44 disciplinas. Sendo 17 disciplinas
+													de formação básica em computação. Em particular, 4 disciplinas são oferecidas
+													pelo Instituto de Matemática e Estatística (IME) e as outras 13 oferecidas
+													pelo INF que fornecem uma sólida formação em Computação, o que inclui o
+													recomendado para a formação em Matemática. E as demais disciplinas com
+													ênfase na formação específica em Engenharia de Software.
+												</p>
+												<a class="btn btn-lg btn-default" href="informacao/estrutura-curricular.html">Saiba mais</a>
+										</div>
+									</div>
+									<div class="tab-pane" id="context" role="tabpanel">
+										<div class="col-md-12">
+											<h3 class="title">Outras Informações</h3>
+											<p class="description">
+												O Bacharelado em Engenharia de Software (BES) existe e se mantém em um
+												contexto no qual se destaca a aptidão do Instituto de Informática, a
+												carência de mão de obra apta a desenvolver softwares de qualidade e
+												a importância local do curso.
+											</p>
+											<div class="d-flex flex-column flex-md-row lead mb-3 mx-auto btns">
+												<a href="informacao/contexto.html" class="btn btn-lg btn-default">Saiba mais</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
-    <footer class="footer footer-black">
-    		<div class="container">
-    			<div class="row">
-    				<nav class="footer-nav">
-    					<ul>
-    						<li><a href="https://www.ufg.br" target="_blank">UFG</a></li>
-    						<li><a href="http://inf.ufg.br" target="_blank">INF</a></li>
-    					</ul>
-    				</nav>
-    				<div class="credits ml-auto">
-    					<span class="copyright">
-    						© <script>document.write(new Date().getFullYear())</script>, feito com <i class="fa fa-heart heart"></i> por geminos
-    					</span>
-    				</div>
-    			</div>
-    		</div>
-    	</footer>
+    <footer class="footer" data-background-color="black">
+      <div class="container">
+        <nav>
+					<ul>
+						<li>
+							<a rel="tooltip" title="Universidade Federal de Goiás"
+								data-placement="top"
+								href="https://github.com/matheuspiment/integracao2017" target="_blank">
+									UFG
+							</a>
+						</li>
+						<li>
+							<a rel="tooltip" title="Instituto de Informática"
+								data-placement="top"
+								href="https://github.com/matheuspiment/integracao2017"
+								target="_blank">
+									INF
+							</a>
+						</li>
+						<li>
+								<a rel="tooltip" title="Código licensiado MIT"
+									data-placement="top"
+									href="https://github.com/matheuspiment/integracao2017/blob/master/LICENSE.md"
+									target="_blank">
+										MIT License
+								</a>
+						</li>
+					</ul>
+        </nav>
+        <div class="copyright">
+          &copy;
+          <script>
+              document.write(new Date().getFullYear())
+          </script>, Coded by
+            <a href="https://geminos.github.io/" target="_blank">geminos</a>.
+        </div>
+      </div>
+    </footer>
+	</div>
+</body>
+<!--   Core JS Files   -->
+<script src="assets/js/core/jquery.3.2.1.min.js" type="text/javascript"></script>
+<script src="assets/js/core/popper.min.js" type="text/javascript"></script>
+<script src="assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
+<script src="assets/js/plugins/bootstrap-switch.js"></script>
+<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+<script src="assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+<!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
+<script src="assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
+<!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
+<script src="assets/js/now-ui-kit.js?v=1.1.0" type="text/javascript"></script>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
 </html>
