--- a/informacao/apresentacao.html
+++ b/informacao/apresentacao.html
@@ -1,148 +1,166 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../../../favicon.ico">
+<html lang="pt-br">
 
-    <title>Dashboard Template for Bootstrap</title>
+<head>
+  <meta charset="utf-8" />
+  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/logo-inf.png">
+  <link rel="icon" type="image/png" href="../assets/img/logo-inf.png">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <title>Bacharelado em Engenharia de Software</title>
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+  <!--     Fonts and icons     -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+  <!-- CSS Files -->
+  <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../assets/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
+	<link href="../assets/css/bes.css" rel="stylesheet" />
+  <!-- CSS Just for demo purpose, don't include it in your project -->
+  <!-- <link href="../assets/css/demo.css" rel="stylesheet" /> -->
+</head>
 
-    <!-- Bootstrap core CSS -->
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/css/custom.css" rel="stylesheet">
-    <link href="../assets/css/font-awesome.min.css" rel="stylesheet">
+<body class="landing-page sidebar-collapse">
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-lg bg-info fixed-top">
+		<div class="container">
+	    <div class="navbar-translate">
+				<a class="navbar-brand" href="http://www.inf.ufg.br" rel="tooltip" title="Instituto de Informática - UFG" data-placement="bottom" target="_blank">
+					<div class="logo">
+						<img src="../assets/img/logo-inf.png" alt="Instituto de Informática">
+					</div>
+				</a>
+        <button class="navbar-toggler navbar-toggler-menu" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-bar bar1"></span>
+            <span class="navbar-toggler-bar bar2"></span>
+            <span class="navbar-toggler-bar bar3"></span>
+        </button>
+	    </div>
+	    <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="../index.html">
+							<p>Home</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">
+							<p>Matriz Curricular</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">
+							<p>Informações</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" rel="tooltip" title="Visualizar código fonte" data-placement="bottom" href="https://github.com/matheuspiment/integracao2017" target="_blank">
+							<i class="fa fa-github"></i>
+							<p class="d-lg-none d-xl-none">Código-fonte</p>
+						</a>
+					</li>
+				</ul>
+	    </div>
+		</div>
+	</nav>
+	<!-- End Navbar -->
+	<div class="wrapper">
+			<div class="container-fluid">
+				<div class="row">
+					<nav class="col-md-3 sidebar">
+						<nav class="navbar navbar-light navbar-info">
+							<div class="container">
+							<form class="form-inline" action="pesquisa.html" method="get">
+									<input class="form-control mr-2" name="pesquisa" type="text" placeholder="Buscar" aria-label="Search" required>
+									<button class="btn btn-warning btn-icon  btn-icon-mini btn-round" type="submit">
+										<i class="fa fa-search"></i>
+									</button>
+							</form>
+							<button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#information-index" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+			            <span class="navbar-toggler-bar bar1"></span>
+			            <span class="navbar-toggler-bar bar2"></span>
+			            <span class="navbar-toggler-bar bar3"></span>
+			        </button>
+						</div>
+						</nav>
+						<div class="collapse" id="information-index">
+							<ul class="nav nav-index flex-column">
+								<li class="nav-item">
+									<a class="nav-link active" href="apresentacao.html">Apresentação<span class="sr-only">(current)</span></a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="identificacao.html">Identificação</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="contexto.html">Contexto</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="exposicao-motivos.html">Exposição de Motivos</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="objetivos.html">Objetivos</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="expectativa-formacao-profissional.html">Expectativas de Formação Profissional</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="principios-norteadores.html">Princípios Norteadores</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="nucleo-docente-estruturante.html">Núcleo Docente Estruturante (NDE)</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="politica-gestao-estagio.html">Política de Gestão de Estágio Não Obrigatório</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="trabalho-conclusao-curso.html">Trabalho de Conclusao de Curso (TCC)</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="integracao-ensino-pesquisa-extensao.html">Integracao, Ensino, Pesquisa e Extensao</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="avaliacao-processo-aprendizagem.html">Avaliacao do Processo de Ensino e Aprendizagem</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="avaliacao-projeto-curso.html">Avaliacao do Projeto de Curso</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="politica-qualificacao.html">Politica de Qualificação</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="requisitos-legais-normativos.html">Requisitos Legais e Normativos</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="estrutura-curricular.html">Estrutura Curricular</a>
+								</li>
+							</ul>
+					</div>
+					</nav>
 
-    <!-- Custom styles for this template -->
-    <link href="../assets/css/dashboard.css" rel="stylesheet">
-  </head>
+					<main class="ml-sm-auto col-md-9 pt-3 section-info" role="main">
+						<h1 class="title">Projeto Pedagógico do Curso</h1>
+						<h2>Apresentação</h2>
+						<p>O curso de Bacharelado em Engenharia de Software (BES) é oferecido pelo Instituto de Informática (INF) da Universidade Federal de Goiás (UFG). A primeira versão do Projeto Pedagógico do Curso (PPC) foi criada em 2008, a segunda versão, é fruto de uma reflexão de dois anos do Núcleo Docente Estruturante (NDE), que reinventou o BES.</p>
+						<p>A busca pela qualidade é a motivação dessa segunda versão, que só pode ser adequadamente compreendida com o detalhamento da história da criação do curso e do cenário no qual está inserido, o que lembra Paulo Freire, segundo o qual “toda leitura de texto pressupõe uma rigorosa leitura do contexto”.</p>
+						<p>Não houve alteração relevante dos objetivos do curso, nem tampouco do perfil do egresso, contudo, ambos foram refinados. Os requisitos legais e normativos foram ampliados pelas diretrizes curriculares nacionais (que não existiam quando a primeira versão foi produzida). Em particular, a estratégia para atender a educação das relações étnico-raciais e para o ensino de história e cultura afro-brasileira e africana foi revista em sua totalidade.</p>
+						<p>A estrutura curricular sofreu mudanças significativas. Em particular, o fluxo sugerido, nos quatro primeiros períodos, inclui apenas disciplinas de formação básica em computação. A disciplina “Prática em Engenharia de Software” é o elemento integrador do curso, com carga horária de 320 horas. Em particular, as disciplinas específicas de Engenharia de Software são acompanhadas de uma seção adicional, “condições mínimas”, que estabelece competências a serem demonstradas/adquiridas pelo estudante em cada uma delas.</p>
+						<p>A busca por um curso de Engenharia de Software melhor é uma atribuição contínua do NDE. Esse compromisso é oportuno para estabelecer claramente a responsabilidade pela gestão do presente PPC pelo NDE, sem o qual esse texto resume-se a um registro de intenções.</p>
+					</main>
+				</div>
+			</div>
 
-  <body>
-    <nav class="navbar navbar-expand-md navbar-dark navbar-black bg-dark fixed-top">
-      <a class="navbar-brand" href="../index.html">
-         <img src="../assets/img/marca-inf.png" width="30" height="30" alt="">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+	</div>
+</body>
+<!--   Core JS Files   -->
+<script src="../assets/js/core/jquery.3.2.1.min.js" type="text/javascript"></script>
+<script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
+<script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
+<script src="../assets/js/plugins/bootstrap-switch.js"></script>
+<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+<script src="../assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+<!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
+<script src="../assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
+<!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
+<script src="../assets/js/now-ui-kit.js?v=1.1.0" type="text/javascript"></script>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#">Plano Pedagógico</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Matriz Curricular</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li> -->
-        </ul>
-        <form class="form-inline search-form" action="../pesquisa.html" method="get">
-          <input class="form-control mr-2" name="pesquisa" type="text" placeholder="Buscar" aria-label="Search" required>
-          <button class="btn btn-warning" type="submit">
-            <i class="fa fa-search"></i>
-          </button>
-        </form>
-      </div>
-    </nav>
-
-    <div class="container-fluid">
-      <div class="row">
-        <nav class="col-md-3 sidebar">
-          <nav class="navbar navbar-light navbar-doc">
-            <form class="form-inline" action="../pesquisa.html" method="get">
-              <input class="form-control mr-2" name="pesquisa" type="text" placeholder="Buscar" aria-label="Search" required>
-              <button class="btn btn-warning" type="submit">
-                <i class="fa fa-search"></i>
-              </button>
-            </form>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#doc" aria-controls="doc" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </nav>
-          <div class="collapse" id="doc">
-            <ul class="nav nav-pills flex-column">
-              <li class="nav-item">
-                <a class="nav-link active" href="apresentacao.html">Apresentação<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="identificacao.html">Identificação</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contexto.html">Contexto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="exposicao-motivos.html">Exposição de Motivos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="objetivos.html">Objetivos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="expectativa-formacao-profissional.html">Expectativas de Formação Profissional</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="principios-norteadores.html">Princípios Norteadores</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nucleo-docente-estruturante.html">Núcleo Docente Estruturante (NDE)</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="politica-gestao-estagio.html">Política de Gestão de Estágio Não Obrigatório</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="trabalho-conclusao-curso.html">Trabalho de Conclusao de Curso (TCC)</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="integracao-ensino-pesquisa-extensao.html">Integracao, Ensino, Pesquisa e Extensao</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="avaliacao-processo-aprendizagem.html">Avaliacao do Processo de Ensino e Aprendizagem</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="avaliacao-projeto-curso.html">Avaliacao do Projeto de Curso</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="politica-qualificacao.html">Politica de Qualificação</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="requisitos-legais-normativos.html">Requisitos Legais e Normativos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="estrutura-curricular.html">Estrutura Curricular</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-        
-        <main class="ml-sm-auto col-md-9 pt-3 section-main" role="main">
-          <h1>Projeto Pedagógico do Curso</h1>
-          <h2 style="margin-bottom: 20px;">Apresentação</h2>
-          <p>O curso de Bacharelado em Engenharia de Software (BES) é oferecido pelo Instituto de Informática (INF) da Universidade Federal de Goiás (UFG). A primeira versão do Projeto Pedagógico do Curso (PPC) foi criada em 2008, a segunda versão, é fruto de uma reflexão de dois anos do Núcleo Docente Estruturante (NDE), que reinventou o BES.</p>
-          <p>A busca pela qualidade é a motivação dessa segunda versão, que só pode ser adequadamente compreendida com o detalhamento da história da criação do curso e do cenário no qual está inserido, o que lembra Paulo Freire, segundo o qual “toda leitura de texto pressupõe uma rigorosa leitura do contexto”.</p>
-          <p>Não houve alteração relevante dos objetivos do curso, nem tampouco do perfil do egresso, contudo, ambos foram refinados. Os requisitos legais e normativos foram ampliados pelas diretrizes curriculares nacionais (que não existiam quando a primeira versão foi produzida). Em particular, a estratégia para atender a educação das relações étnico-raciais e para o ensino de história e cultura afro-brasileira e africana foi revista em sua totalidade.</p>
-          <p>A estrutura curricular sofreu mudanças significativas. Em particular, o fluxo sugerido, nos quatro primeiros períodos, inclui apenas disciplinas de formação básica em computação. A disciplina “Prática em Engenharia de Software” é o elemento integrador do curso, com carga horária de 320 horas. Em particular, as disciplinas específicas de Engenharia de Software são acompanhadas de uma seção adicional, “condições mínimas”, que estabelece competências a serem demonstradas/adquiridas pelo estudante em cada uma delas.</p>
-          <p>A busca por um curso de Engenharia de Software melhor é uma atribuição contínua do NDE. Esse compromisso é oportuno para estabelecer claramente a responsabilidade pela gestão do presente PPC pelo NDE, sem o qual esse texto resume-se a um registro de intenções.</p>
-        </main>
-      </div>
-    </div>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../assets/js/jquery-3.2.1.min.js"></script>
-    <script src="../assets/js/popper.min.js"></script>
-    <script src="../assets/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
 </html>
