--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<img src="assets/img/logo-inf.png" alt="Instituto de Informática">
 					</div>
 				</a>
-	        <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+	        <button class="navbar-toggler navbar-toggler-menu" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
 	            <span class="navbar-toggler-bar bar1"></span>
 	            <span class="navbar-toggler-bar bar2"></span>
 	            <span class="navbar-toggler-bar bar3"></span>
