--- a/informacao/apresentacao.html
+++ b/informacao/apresentacao.html
@@ -10,7 +10,7 @@
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="../assets/css/font-awesome.min.css" />
   <!-- CSS Files -->
   <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="../assets/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
@@ -19,7 +19,7 @@
   <!-- <link href="../assets/css/demo.css" rel="stylesheet" /> -->
 </head>
 
-<body class="landing-page sidebar-collapse">
+<body class="info-page sidebar-collapse">
 	<!-- Navbar -->
 	<nav class="navbar navbar-expand-lg bg-info fixed-top">
 		<div class="container">
