:art: fix dicionario.json and add new search page

--- a/search.html
+++ b/search.html
@@ -67,118 +67,20 @@
 	      </div>
 	      <div class="container">
 	          <div class="content-center">
-	              <h1 class="title">Bacharelado em Engenharia de Software</h1>
+	              <h1 class="title">Buscar</h1>
+								<form class="form-inline search-form my-2 my-lg-0" action="search.html" method="get">
+									<input class="form-control mr-2 w-75" name="pesquisa" type="text" placeholder="Buscar" aria-label="Search" required>
+									<button class="btn btn-warning btn-icon btn-icon-mini btn-round my-2 my-sm-0" type="submit">
+										<i class="fa fa-search"></i>
+									</button>
+								</form>
 	          </div>
 	      </div>
 	  </div>
-    <div class="section section-presentation">
+    <div class="section section-search-result">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 ml-auto mr-auto text-center">
-            <h2 class="title">O que é?</h2>
-            <h5 class="description">
-							O curso de Bacharelado em Engenharia de Software (BES)
-							é oferecido pelo Instituto de Informática
-							(<a href="http://inf.ufg.br" target="_blank">INF</a>)
-							da Universidade Federal de Goiás
-							(<a href="https://www.ufg.br/" target="_blank">UFG</a>).
-							</br></br>
-							A bacharela ou o bacharel em Engenharia de Software é
-							capaz de efetivamente contrubuir com equipes na produção
-							de modelos abstratos de software e realizá-loa por meio
-							de código de qualidade. Essa contribuição é pautada por
-							postura profissional e conduta ética.
-							</br></br>
-							Ficou intereçado? Para mais informações, conheça o Projeto Pedagógico do Curso (PPC):
-						</h5>
-						<div class="d-flex flex-column flex-md-row lead mb-3 mx-auto btns">
-							<a href="informacao/apresentacao.html" class="btn btn-lg mr-md-3">Saiba Mais</a>
-							<a href="assets/docs/ppc-bes.pdf" download="PPC-BES.pdf" class="btn btn-lg btn-info">Download</a>
-						</div>
-						<p class="text-muted mb-0">
-							Atualmente na versão de 2017
-						</p>
-          </div>
-        </div>
-        <div class="separator separator-default"></div>
-        <div class="section section-info">
-          <div class="row">
-            <div class="col-md-8 text-center mx-auto">
-            	<h3>Não tem ideia de por onde começar?</h3>
-              <h5>Navege pelos botões abaixo para obter mais detalhes do PPC,
-								essas informações podem te ajudar.
-              </h5>
-							<div class="row">
-								<div class="col-md-12 ml-auto mr-auto my-4">
-									<div class="nav-align-center">
-										<ul class="nav nav-pills nav-pills-info" role="tablist">
-											<li class="nav-item">
-												<a class="nav-link" data-toggle="tab" href="#structure-graduation" role="tablist">
-													<i class="fa fa-list-alt"></i>
-												</a>
-											</li>
-											<li class="nav-item">
-												<a class="nav-link active" data-toggle="tab" href="#about-graduation" role="tablist">
-													<i class="fa fa-graduation-cap"></i>
-												</a>
-											</li>
-											<li class="nav-item">
-												<a class="nav-link" data-toggle="tab" href="#context" role="tablist">
-													<i class="fa fa-info"></i>
-												</a>
-											</li>
-										</ul>
-									</div>
-								</div>
-								<!-- Tab panes -->
-								<div class="tab-content info">
-									<div class="tab-pane active" id="about-graduation" role="tabpanel">
-										<div class="col-md-12">
-											<h3 class="title">Sobre o Curso</h3>
-											<p class="description">
-												O Curso de Engenharia de Software forma o profissional
-												de software, o engenheiro de Software, apto a participar
-												de e conduzir empreendimentos de softwares que sejam
-												competitivos no mercado global. O estudante recebe
-												formação que lhe assegura sólida carreira na valiosa
-												indústria de software e o inicia no processo de formação
-												de sua própria reputação como profissional.
-											</p>
-											<a class="btn btn-lg btn-default" href="informacao/apresentacao.html">Saiba mais</a>
-										</div>
-									</div>
-									<div class="tab-pane" id="structure-graduation" role="tabpanel">
-										<div class="col-md-12">
-											<h3 class="title">Estrutura Curricular</h3>
-												<p class="description">
-													A matriz curricular do curso perfaz 44 disciplinas. Sendo 17 disciplinas
-													de formação básica em computação. Em particular, 4 disciplinas são oferecidas
-													pelo Instituto de Matemática e Estatística (IME) e as outras 13 oferecidas
-													pelo INF que fornecem uma sólida formação em Computação, o que inclui o
-													recomendado para a formação em Matemática. E as demais disciplinas com
-													ênfase na formação específica em Engenharia de Software.
-												</p>
-												<a class="btn btn-lg btn-default" href="informacao/estrutura-curricular.html">Saiba mais</a>
-										</div>
-									</div>
-									<div class="tab-pane" id="context" role="tabpanel">
-										<div class="col-md-12">
-											<h3 class="title">Outras Informações</h3>
-											<p class="description">
-												O Bacharelado em Engenharia de Software (BES) existe e se mantém em um
-												contexto no qual se destaca a aptidão do Instituto de Informática, a
-												carência de mão de obra apta a desenvolver softwares de qualidade e
-												a importância local do curso.
-											</p>
-											<div class="d-flex flex-column flex-md-row lead mb-3 mx-auto btns">
-												<a href="informacao/contexto.html" class="btn btn-lg btn-default">Saiba mais</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-            </div>
-          </div>
+
         </div>
       </div>
     </div>
