--- a/informacao/identificacao.html
+++ b/informacao/identificacao.html
@@ -136,7 +136,88 @@
 
 					<main class="ml-sm-auto col-md-9 pt-3 section-info" role="main">
 						<h1 class="title">Identificação</h1>
-						<p><b>TABELA</b></p>
+						<table style="width:100%">
+							<tr>
+							  <th>Nome do curso:</th>
+							  <td>Engenharia de Software</td>
+							</tr>
+							<tr>
+								<th>Grau acadêmico:</th>
+								<td>Bacharelado</td>
+							</tr>
+							<tr>
+								<th>Título do egresso:</th>
+								<td>Bacharel(a) em Engenharia de Software</td>
+							</tr>
+							<tr>
+							  <th rowspan="4">Área de conhecimento (CNPq):</th>
+							  <td>Ciências Exatas e da Terra (1.00.00.00-3)</td>
+							</tr>
+							<tr>
+							  <td>Ciência da Computação (1.03.00.00-7)</td>
+							</tr>
+							<tr>
+								<td>Metodologia e Técnicas da Computação (1.03.03.00-6)</td>
+							</tr>
+							<tr>
+								<td><b>Engenharia de Software (1.03.03.02-2)</b></td>
+							</tr>
+							<tr>
+								<th>Modalidade:</th>
+								<td>Presencial</td>
+							</tr>
+							<tr>
+							  <th rowspan="2">Local de oferta:</th>
+							  <td>Instituto de Informática (UFG)</td>
+							</tr>
+							<tr>
+							  <td>Alameda Palmeiras, Quadra D, Câmpus Samambaia, Goiânia (GO), CEP 74690-900</td>
+							</tr>
+							<tr>
+								<th rowspan="2">Reconhecimento:</th>
+								<td>Portaria Nº 819 de 29 de outubro de 2015. </td>
+							</tr>
+							<tr>
+								<td>Número de registro no e-MEC: 201307356.</td>
+							</tr>
+							<tr>
+								<th>Responsável:</th>
+								<td>Instituto de Informática (INF)</td>
+							</tr>
+							<tr>
+							  <th rowspan="3">Unidades executoras:</th>
+							  <td>Instituto de Informática (UFG)</td>
+							</tr>
+							<tr>
+							  <td>Instituto de Matemática e Estatística (IME)</td>
+							</tr>
+							<tr>
+								<td>Faculdade de Letras (Letras)</td>
+							</tr>
+							<tr>
+								<th>Número de vagas:</th>
+								<td>40 vagas anuais</td>
+							</tr>
+							<tr>
+								<th>Carga horária:</th>
+								<td>3200</td>
+							</tr>
+							<tr>
+								<th>Duração do curso em semestres:</th>
+								<td>9 semestres</td>
+							</tr>
+							<tr>
+								<th>Turno de funcionamento:</th>
+								<td>Noturno</td>
+							</tr>
+							<tr>
+								<th>Forma de ingresso:</th>
+								<td>Sistema de Seleção Unificada (SiSU). Em caso de existência de vagas é possível <br/>
+									o ingresso através: (a) de transferência de outras instituições de ensino superior; <br/>
+									(b) portadores de diploma ou (c) reingresso. Essas opções dependem de processo  <br/>
+									seletivo específico na UFG.</td>
+							</tr>
+						  </table>
 					</main>
 				</div>
 			</div>
