add search functionality and update files with corrections

--- a/index.html
+++ b/index.html
@@ -51,9 +51,15 @@
 						</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" rel="tooltip" title="Ir para a página de busca" data-placement="bottom" href="search.html">
+							<i class="fa fa-search"></i>
+							<p class="d-lg-none d-xl-none">Página de Busca</p>
+						</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" rel="tooltip" title="Visualizar código fonte" data-placement="bottom" href="https://github.com/matheuspiment/integracao2017" target="_blank">
 							<i class="fa fa-github"></i>
-							<p class="d-lg-none d-xl-none">Código-fonte</p>
+							<p class="d-lg-none d-xl-none">Código-Fonte</p>
 						</a>
 					</li>
 				</ul>
@@ -190,14 +196,14 @@
 						<li>
 							<a rel="tooltip" title="Universidade Federal de Goiás"
 								data-placement="top"
-								href="https://github.com/matheuspiment/integracao2017" target="_blank">
+								href="http://www.ufg.br/" target="_blank">
 									UFG
 							</a>
 						</li>
 						<li>
 							<a rel="tooltip" title="Instituto de Informática"
 								data-placement="top"
-								href="https://github.com/matheuspiment/integracao2017"
+								href="http://inf.ufg.br/"
 								target="_blank">
 									INF
 							</a>
