--- a/disciplinas/introducao-programacao.html
+++ b/disciplinas/introducao-programacao.html
@@ -60,7 +60,7 @@
       <div class="row">
         <nav class="col-md-3 sidebar">
           <nav class="navbar navbar-light navbar-doc">
-            <form class="form-inline" action="pesquisa.html" method="get">
+            <form class="form-inline" action="../search.html" method="get">
               <input class="form-control mr-2" name="pesquisa" type="text" placeholder="Buscar" aria-label="Search" required>
               <button class="btn btn-warning" type="submit">
                 <i class="fa fa-search"></i>
