--- a/informacao/exposicao-motivos.html
+++ b/informacao/exposicao-motivos.html
@@ -67,7 +67,7 @@
 					<nav class="col-md-3 sidebar">
 						<nav class="navbar navbar-light navbar-info">
 							<div class="container">
-							<form class="form-inline" action="pesquisa.html" method="get">
+							<form class="form-inline" action="../search.html" method="get">
 									<input class="form-control mr-2" name="pesquisa" type="text" placeholder="Buscar" aria-label="Search" required>
 									<button class="btn btn-warning btn-icon  btn-icon-mini btn-round" type="submit">
 										<i class="fa fa-search"></i>
