--- a/search.html
+++ b/search.html
@@ -36,7 +36,7 @@
 	    <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="assets/img/blurred-image-1.jpg">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="#">
+						<a class="nav-link" href="index.html">
 							<p>Home</p>
 						</a>
 					</li>
@@ -79,8 +79,10 @@
 	  </div>
     <div class="section section-search-result">
       <div class="container">
-        <div class="row">
-
+        <div class="row" id="resultado">
+					<div class="col-md-12 text-center">
+						<img class="" style="width: 35%; max-width: 220px;" src="assets/img/loading.gif"/>
+					</div>
         </div>
       </div>
     </div>
@@ -92,14 +94,14 @@
 						<li>
 							<a rel="tooltip" title="Universidade Federal de Goiás"
 								data-placement="top"
-								href="https://github.com/matheuspiment/integracao2017" target="_blank">
+								href="http://www.ufg.br/" target="_blank">
 									UFG
 							</a>
 						</li>
 						<li>
 							<a rel="tooltip" title="Instituto de Informática"
 								data-placement="top"
-								href="https://github.com/matheuspiment/integracao2017"
+								href="http://inf.ufg.br/"
 								target="_blank">
 									INF
 							</a>
@@ -137,48 +139,63 @@
 <script src="assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
 <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
 <script src="assets/js/now-ui-kit.js?v=1.1.0" type="text/javascript"></script>
-<script src="assets/js/search.js" type="text/javascript"></script>
+<script src="assets/js/utils.js" type="text/javascript"></script>
 <script type="text/javascript">
-	$( document ).ready(function() {
-		function queryObj() {
-			var result = {}, keyValuePairs = location.search.slice(1).split("&");
-			keyValuePairs.forEach(function(keyValuePair) {
-				keyValuePair = keyValuePair.split('=');
-				result[decodeURIComponent(keyValuePair[0])] = decodeURIComponent(keyValuePair[1]) || '';
-			});
-			return result;
-		}
+$( document ).ready(function() {
 
+	var busca = queryObj();
+	var keyword = busca.pesquisa;
+	var response = '';
+	var isReturned = false;
 
-		$.getJSON("dicionario.json", function(data){
-			// for (var i = 0; i < data.length; i++) {
-				console.log(data);
-				var key = queryObj();
-				var retornoBusca;
-				if (typeof key.pesquisa != "undefined") {
-					console.log(key.pesquisa);
-					var top = data.topicos;
-					console.log(top.length);
-					for (var i = 0; i < top.length; i++) {
+	if (typeof keyword != "undefined") {
+		retornoBusca = setTimeout(function(){
+			keyword = keyword.toLowerCase();
+			$.getJSON("../dicionario.json", function(data) {
+				topicos = data.topicos;
+				$.each(topicos, function(i, item) {
+					palavrasChave = topicos[i].palavraChave;
+					$.each(palavrasChave, function(j, item) {
+						targetWord = palavrasChave[j];
+						targetWord = targetWord.toLowerCase();
+						targetWordLength = targetWord.length;
+						match = levenshtein_distance_a(keyword, targetWord) / targetWordLength;
+						if (match <= 0.65 && isReturned == false) {
+							isReturned = true;
+							response += '<div class="col-md-12 mb-4 search-result">';
+							response += '<a href="' + topicos[i].caminho + '">';
+							response += '<h2>' + topicos[i].titulo + '</h2>';
+							response += '</a>';
+							response += '</div>';
+							console.log(response);
+						}
+					});
 
-							console.log(top[i].titulo);
+					isReturned = false;
+				});
 
-					}
+				if (response != "") {
+					document.getElementById('resultado').innerHTML = response;
 				} else {
-					console.log("erro");
+					response += '<div class="col-md-12">';
+					response += '<div class="alert alert-info" role="alert">';
+					response += 'Nenhum registro encontrado :(';
+					response += '</div>'
+					response += '</div>';
+					document.getElementById('resultado').innerHTML = response;
 				}
-			// }
-			// var items = [];
-			// $.each( data, function( key, val ) {
-			//   items.push( "<li id='" + key + "'>" + val.title + "</li>" );
-			// });
-			//
-			// $( "<ul/>", {
-			//   "class": "my-new-list",
-			//   html: items.join( "" )
-			// }).appendTo( "body" );
-		});
-	});
+			});
+		}, 2000);
+	} else {
+		response += '<div class="col-md-12">';
+		response += '<div class="alert alert-info" role="alert">';
+		response += 'Digite no campo de busca para pesquisar ;)';
+		response += '</div>'
+		response += '</div>';
+		document.getElementById('resultado').innerHTML = response;
+	}
+
+});
 </script>
 
 </html>
