--- a/informacao/estrutura-curricular.html
+++ b/informacao/estrutura-curricular.html
@@ -138,11 +138,7 @@
 						<h1 class="title">Estrutura Curricular</h1>
 	          <h2>Matriz Curricular</h2>
 	          <p>A matriz curricular do curso perfaz 44 disciplinas, delas 17 disciplinas de formação básica em computação. Em particular, são 4 disciplinas oferecidas pelo Instituto de Matemática e Estatística (IME) e as outras 13 oferecidas pelo INF. Todas elas são obrigatórias e pertencem ao Núcleo Comum (NC), que fornecem uma sólida formação em Computação, o que inclui o recomendado para a formação em Matemática. Além dessas, outras seis de Computação são oferecidas como optativas. As outras 27 são específicas da Engenharia de Software. Todas elas são obrigatórias, fazem parte do Núcleo Específico (NE) e são oferecidas pelo INF.</p>
-	          <p>As disciplinas da Tabela 1 fornecem uma sólida formação em Computação, o que inclui o recomendado para a formação em Matemática. Além dessas, outras seis de Computação são oferecidas como optativas na Tabela 3.</p>
-	          <p>As disciplinas da Tabela 2, por outro lado, são específicas da Engenharia de Software. Todas elas são obrigatórias, fazem parte do Núcleo Específico (NE) e são oferecidas pelo INF.</p>
-	          <p><b>IMAGEM Tabela 2</b></p>
-	          <p>São nove as disciplinas optativas. O estudante terá que escolher três delas, conforme as opções oferecidas na Tabela 3 abaixo. </p>
-	          <p><b>IMAGEM Tabela 3</b></p>
+	          <p>São nove as disciplinas optativas. O estudante terá que escolher três delas.</p>
 	          <h2>Núcleo livre</h2>
 	          <p>O Núcleo Livre (NL) é o conjunto de conteúdos voltado para promover a interdisciplinaridade e a transdisciplinaridade, dentre outros objetivos. </p>
 	          <p>A carga horária definida pelo BES para o NL é de 128 horas, que é o mínimo estabelecido pelo Regimento Geral dos Cursos de Graduação (RGCG) da UFG [RGCG].  Tais 128 horas perfazem 4% da carga horária do curso.</p>
