--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#pablo">
-							<p>Matriz Curricular</p>
+						<a class="nav-link" href="disciplinas.html">
+							<p>Disciplinas</p>
 						</a>
 					</li>
 					<li class="nav-item">
