--- a/informacao/apresentacao.html
+++ b/informacao/apresentacao.html
@@ -41,12 +41,12 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">
-							<p>Matriz Curricular</p>
+						<a class="nav-link" href="../disciplinas.html">
+							<p>Disciplinas</p>
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">
+						<a class="nav-link" href="apresentação.html">
 							<p>Informações</p>
 						</a>
 					</li>
