--- a/disciplinas.html
+++ b/disciplinas.html
@@ -149,7 +149,7 @@
 
 		if (typeof subjectAlias != "undefined") {
 			retornoBusca = setTimeout(function(){
-				$.getJSON("disciplinas.json", function(data) {
+				$.getJSON("data/subjects.json", function(data) {
 					subjects = data;
 					$.each(subjects, function(i, item) {
 						if (subjects[i].alias == subjectAlias) {
@@ -252,7 +252,7 @@
 			}, 2000);
 		} else {
 			retornoBusca = setTimeout(function(){
-				$.getJSON("disciplinas.json", function(data) {
+				$.getJSON("data/subjects.json", function(data) {
 					subjects = data;
 					var period = 1;
 					response += '<h1 class="title">1º Período</h1>'
