--- a/informacao/objetivos.html
+++ b/informacao/objetivos.html
@@ -46,7 +46,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="apresentação.html">
+						<a class="nav-link" href="apresentacao.html">
 							<p>Informações</p>
 						</a>
 					</li>
